2003-05-23  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-options.c: don't let the user do anything
	  with the options dialog until Apply() finishes.  This is a
	  simple fix for #107953 so that a user can't crash gnucash by
	  hitting Apply and then OK (before the Apply completes).
	  However, what should really happen is that we queue up requests
	  to destroy ourselves and process the event later.  See #107953
	  for more information.

	* src/report/report-system/report-utilities.scm: had the wrong
	  number of arguments in gnc:account-get-balance-at-date.

	* src/report/standard-reports/balance-sheet.scm: add some
	  (commented out) code to support a start date for computing the
	  Net Income (aka Net Profit) in the Balance Sheet.  This is
	  a commented-out partial fix for #113196.

	* src/business/business-gnome/business-gnome.scm:
	* src/scm/main-window.scm:
	  Move the instantiation of File -> Properties into
	  main-window.scm (out of business-gnome.scm) for future cases
	  where we might decide to ship the business modules separately.

	* src/import-export/ofx/test/test-link.c: fix the test program
	  to make sure it links on many weird platforms.
	
2003-05-22  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-reports/owner-report.scm:  Better fix for 108731
	  limit the itemized invoices/payments to the start/end date range,
	  but print out a "Balance" line if there is a non-zero balance as
	  of the start date.

	Nikos Charonitakis's account chart updates:
	* accounts/el_GR/Makefile.am: added new carloan account chart
	* accounts/el_GR/acctchrt_common.gnucash-xea: updated account chart
	* accounts/el_GR/acctchrt_carloan.gnucash-xea: new car loan chart

	* src/report/standard-reports/average-balance.scm:
	  Use the correct columns when printing the Gain column, don't
	  reuse the same column as profit; we want to report different
	  values.  Fixes #113096.
	
2003-05-21  Derek Atkins  <derek@ihtfp.com>
