@@ -1,5 +1,6 @@
 TESTS=test-link
 
+AM_CFLAGS=${LIBOFX_CFLAGS}
 noinst_PROGRAMS=test-link
 
 test_link_SOURCES=test-link.c
