@@ -71,6 +71,9 @@ struct gnc_report_window_s
   
   SCM          edited_reports;
 
+  /* This is set to mark the fact that we need to reload the html */
+  gboolean	need_reload;
+
   gnc_html     * html;
 };
 
@@ -529,6 +532,19 @@ gnc_report_window_params_cb(GtkWidget * w, gpointer data)
   return TRUE;
 }
 
+/* We got a draw event.  See if we need to reload the report */
+static void
+gnc_report_window_draw_cb(GtkWidget *unused, GdkRectangle *unused1, gpointer data)
+{
+  gnc_report_window *win = data;
+
+  if (!win->need_reload)
+    return;
+
+  win->need_reload = FALSE;
+  gnc_html_reload(win->html);
+}
+
 static void
 gnc_report_window_reload_cb(GtkWidget * unused, gpointer data)
 {
@@ -537,7 +553,10 @@ gnc_report_window_reload_cb(GtkWidget * unused, gpointer data)
 
   if(report->cur_report != SCM_BOOL_F) {
     scm_call_2(dirty_report, report->cur_report, SCM_BOOL_T);
-    gnc_html_reload(report->html);
+
+    /* now queue the fact that we need to reload this report */
+    report->need_reload = TRUE;
+    gtk_widget_queue_draw(report->container);
   }
 }
 
@@ -586,7 +605,10 @@ gnc_report_window_option_change_cb(gpointer data)
   if(report->cur_report != SCM_BOOL_F) {
     /* it's probably already dirty, but make sure */
     scm_call_2(dirty_report, report->cur_report, SCM_BOOL_T);
-    gnc_html_reload(report->html);
+
+    /* Now queue the fact that we need to reload this report */
+    report->need_reload = TRUE;
+    gtk_widget_queue_draw(report->container);
   }
 }
 
@@ -792,6 +814,9 @@ gnc_report_window_new(GNCMDIChildInfo * mc)
   gtk_signal_connect(GTK_OBJECT(report->container), "destroy",
                      GTK_SIGNAL_FUNC(gnc_report_window_destroy_cb),
                      report);
+  gtk_signal_connect(GTK_OBJECT(report->container), "draw",
+		     GTK_SIGNAL_FUNC(gnc_report_window_draw_cb), report);
+
   
   gtk_widget_show_all(report->container);
   
